manifests/post-installation/host-trusted/dpu-node-ipam-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpu-cluster-node-ipam-controller-manager
  namespace: <HOSTED_CONTROL_PLANE_NAMESPACE>
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: dpu-cluster-node-ipam
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dpu-cluster-node-ipam
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        - --openshift-config=/etc/kubernetes/config/config.json
        - --kubeconfig=/etc/kubernetes/secrets/svc-kubeconfig/kubeconfig
        - --authentication-kubeconfig=/etc/kubernetes/secrets/svc-kubeconfig/kubeconfig
        - --authorization-kubeconfig=/etc/kubernetes/secrets/svc-kubeconfig/kubeconfig
        - --controllers=-bootstrap-signer-controller,-certificatesigningrequest-approving-controller,-certificatesigningrequest-cleaner-controller,-certificatesigningrequest-signing-controller,-cloud-node-lifecycle-controller,-clusterrole-aggregation-controller,-cronjob-controller,-daemonset-controller,-deployment-controller,-disruption-controller,-endpoints-controller,-endpointslice-controller,-endpointslice-mirroring-controller,-ephemeral-volume-controller,-garbage-collector-controller,-horizo [...]
        - --allocate-node-cidrs=true
        - --cluster-cidr=10.244.0.0/14
        - --node-cidr-mask-size=24
        - --service-cluster-ip-range=172.31.0.0/16
        - --leader-elect=true
        - --leader-elect-renew-deadline=12s
        - --leader-elect-retry-period=3s
        - --leader-elect-resource-name=dpu-cluster-node-ipam-controller
        - --root-ca-file=/etc/kubernetes/certs/root-ca/ca.crt
        - --secure-port=10257
        - --service-account-private-key-file=/etc/kubernetes/certs/service-signer/service-account.key
        - --service-cluster-ip-range=172.31.0.0/16
        - --use-service-account-credentials=true
        - --cluster-signing-duration=17520h
        - --tls-cert-file=/etc/kubernetes/certs/server/tls.crt
        - --tls-private-key-file=/etc/kubernetes/certs/server/tls.key
        - --v=2
        command:
        - hyperkube
        - kube-controller-manager
        image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:c4778d7ebdcfdcb188c9f7c45c5934d1e2d8f93f3f6e794214c334ade1fe67f3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: healthz
            port: 10257
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: kube-controller-manager
        ports:
        - containerPort: 10257
          name: client
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: healthz
            port: 10257
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 60m
            memory: 400Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/kubernetes
          name: certs
        - mountPath: /etc/kubernetes/certs/cluster-signer
          name: cluster-signer
        - mountPath: /etc/kubernetes/config
          name: kcm-config
        - mountPath: /etc/kubernetes/secrets/svc-kubeconfig
          name: kubeconfig
        - mountPath: /var/log/kube-controller-manager
          name: logs
        - mountPath: /etc/kubernetes/recycler-config
          name: recycler-config
        - mountPath: /etc/kubernetes/certs/root-ca
          name: root-ca
        - mountPath: /etc/kubernetes/certs/server
          name: server-crt
        - mountPath: /etc/kubernetes/certs/service-signer
          name: service-signer
        - mountPath: /etc/kubernetes/certs/service-ca
          name: service-serving-ca
      dnsPolicy: ClusterFirst
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: hypershift-control-plane
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: hypershift.openshift.io/control-plane
        operator: Equal
        value: "true"
      - effect: NoSchedule
        key: hypershift.openshift.io/cluster
        operator: Equal
        value: <HOSTED_CLUSTER_NAME>
      volumes:
      - configMap:
          defaultMode: 420
          name: kcm-config
        name: kcm-config
      - configMap:
          defaultMode: 420
          name: root-ca
        name: root-ca
      - emptyDir: {}
        name: logs
      - name: kubeconfig
        secret:
          defaultMode: 416
          secretName: kube-controller-manager-kubeconfig
      - name: cluster-signer
        secret:
          defaultMode: 416
          secretName: cluster-signer-ca
      - emptyDir: {}
        name: certs
      - name: service-signer
        secret:
          defaultMode: 416
          secretName: sa-signing-key
      - name: server-crt
        secret:
          defaultMode: 416
          secretName: kcm-server
      - configMap:
          defaultMode: 420
          name: recycler-config
        name: recycler-config
      - configMap:
          defaultMode: 420
          optional: true
          name: service-serving-ca
        name: service-serving-ca
